cmake_minimum_required(VERSION 3.27)
project(studyC C)

set(CMAKE_C_STANDARD 11)

add_executable(1 usingArrays.c)
add_executable(2 fuctionCallswithArrays.c)
add_executable(3 twoDimensionalArrays.c)
add_executable(4 ampersandOperator.c)
add_executable(5 pointer_like_array.c)
add_executable(6 pointer_scanf_like_array.c)
add_executable(7 twoSum.c)
add_executable(8 structure.c)
add_executable(9 arrow.c)
add_executable(10 structureAllocation.c)
add_executable(11 denominatorSum.c)
add_executable(12 stack.c)
add_executable(13 list_reverse.c)
add_executable(14 callBy.c)
add_executable(15 arrayAndPointer.c)
add_executable(16 queue.c)
add_executable(17 list.c)
add_executable(18 linkedList.c)
add_executable(19 circularLinkedList.c)
add_executable(20 test.c)
add_executable(21 testw.c)
